--- a/storeapp/app/src/main/res/layout/activity_main.xml
+++ b/storeapp/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <TextView
+        android:id="@+id/auth_user_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/name_placeholder"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0" />
+
     <Button
         android:id="@+id/signOutButton"
         style="@style/Widget.AppCompat.Button.Colored"
