--- a/storeapp/app/src/main/res/layout/fragment_store.xml
+++ b/storeapp/app/src/main/res/layout/fragment_store.xml
@@ -6,25 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".Main2Activity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/item_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/distance_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/distance_title"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.45" />
+        app:layout_constraintVertical_bias="0.8" />
 
     <TextView
         android:id="@+id/distance_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/distance_placeholder"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.85" />
 
 </android.support.constraint.ConstraintLayout>
