added empty cart image to store fragment layout

--- a/storeapp/app/src/main/res/layout/fragment_store.xml
+++ b/storeapp/app/src/main/res/layout/fragment_store.xml
@@ -11,16 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/distance_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/distance_title"
+    <ImageView
+        android:id="@+id/cart_empty_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="@string/cart_empty_message"
+        android:gravity="center"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.5"
+        app:srcCompat="@drawable/empty_cart" />
 
 </android.support.constraint.ConstraintLayout>
